# tolaria

./: .claude-done  .codescene-thresholds  .env.example  .gitignore  CLAUDE.md  index.html  latest-canary.json  latest.json  package.json  playwright.integration.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  releases.json  ui-design.pen  vite.config.ts
.husky/: pre-commit  pre-push
alpha/: latest.json
design/: autocomplete-type-color.pen  change-note-type.pen  full-text-search.pen  git-status-bar.pen  github-oauth-fix.pen  gs-git-init.pen  properties-text-size.pen  relations-autocomplete-type.pen  theming-system.pen  vista-changes.pen  wiki-autocomplete-type-fix.pen  wikilink-underline.pen  window-frame-fix.pen
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  GETTING-STARTED.md  PROJECT-SPEC.md  VISION.md
e2e/: screenshot.spec.ts
lightbox-demo/: index.html
mcp-server/: index.js  test.js  vault.js  ws-bridge.js
scripts/: bundle-qmd.sh  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_agents.rs  claude_cli.rs  commands.rs  frontmatter.rs  git.rs  github.rs  indexing.rs  lib.rs  mcp.rs  menu.rs  search.rs  settings.rs  theme.rs  vault.rs  vault_config.rs
src-tauri/src/commands/: git.rs  vault.rs
src-tauri/src/commands/vault/: file_cmds.rs  rename_cmds.rs
src-tauri/src/frontmatter/: yaml.rs
src-tauri/src/theme/: defaults.rs  seed.rs
src-tauri/src/vault/: cache.rs  entry.rs  file.rs  frontmatter.rs  getting_started.rs  migration.rs  mod.rs  mod_tests.rs  rename.rs  title_sync.rs  trash.rs  views.rs
(+266 files in other folders)
